@@ -8,6 +8,9 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+01/31/14 Daniel K. O.
+        * Applied patch #185: Stable, implicit gyroscopic forces.
+
 01/27/14 Daniel K. O.
         * Fixed cylinder AABB computation.
 
